--- a/card.css
+++ b/card.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(184, 184, 184);
+    background-color: rgb(233, 230, 230);
     font-family: salaria;
     color: white;
 }
@@ -19,11 +19,12 @@ h2 {
 }
 
 .card {
-    background-image: linear-gradient(to bottom, rgba(64,61,228,1), rgba(135,61,228,.3));
+    background-image: linear-gradient(to bottom, rgba(91,124,242,1), rgba(118,60,192,1));
     border-radius: 15px;
     margin: 0 auto;
     width: 400px;
     text-align: left;
+    border: solid 2px;
     
 }
 
