--- a/card.css
+++ b/card.css
@@ -1,6 +1,6 @@
 body {
     background-color: rgb(233, 230, 230);
-    font-family: salaria;
+    font-family: 'Poppins', sans-serif;
     color: white;
 }
 
@@ -26,13 +26,14 @@ h2 {
     width: 400px;
     text-align: left;
     border: solid 2px;
+    height: 176px;
     
 }
 
 .card .avatar {
     background-color: white;
-    border-radius: 15px;
-    width: 100px;
+    border-radius: 12px;
+    width: 115px;
     margin-left: 10px;
     margin-top: 10px;
     float: left;
@@ -47,7 +48,7 @@ h2 {
 .contacts li {
     width: 40px;
     display: inline-block;
-    padding: 20px 10px;
+    padding: 20px 20px;
 }
 
 .contacts li a img:hover {
